SM-Dev/src/objects/SeeddataKeyValues__c.object
<CustomObject>
    <description>Seeddata Key Values : This object accommodates the actually information and the description for individual seed data information. Actually raw data format.</description>
    <fields>
        <fullName>FieldDescription__c</fullName>
        <description>Field Description : This field accommodates the data description for the individual seed data values derived from the service.</description>
        <label>Field Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>FIELD NAME : This Field accommodates the Seed data type for the Raw data, this information is derived from the SAP system.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <description>FIELD VALUE : This field accommodates the value of the individual seed data item. This is derived from the SAP seed data information.</description>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Seeddata_Key_Values</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FieldDescription__c</columns>
        <columns>FieldName__c</columns>
        <columns>FieldValue__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDKEYVAL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seeddata_Key_values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>